# ML_OPS

./: .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  client.py  docker-compose.yaml  infer.py  pyproject.toml  requirements.txt  train.py
.dvc/: config
ML_OPS/: Model.pth  NN_model.py  data.py  infer.py  run_server.py  train.py
configs/: config.yaml  run.yaml  test.yaml  train.yaml
data/: dataset.csv.dvc  test.csv.dvc  train.csv.dvc
mlruns/0/: meta.yaml
model_repository/onnx-danodel/: config.pbtxt
models/: .gitignore  Model.pth.dvc
outputs/2023-11-30/22-35-55/.hydra/: config.yaml  hydra.yaml
outputs/2023-11-30/22-38-42/.hydra/: hydra.yaml
outputs/2023-11-30/22-43-09/.hydra/: hydra.yaml
outputs/2023-11-30/22-45-00/.hydra/: hydra.yaml
outputs/2023-11-30/22-47-34/.hydra/: hydra.yaml
outputs/2023-11-30/22-48-11/.hydra/: config.yaml  hydra.yaml
outputs/2023-11-30/22-52-09/.hydra/: config.yaml  hydra.yaml
outputs/2023-12-21/22-11-22/.hydra/: hydra.yaml
outputs/2023-12-21/22-17-14/.hydra/: config.yaml  hydra.yaml
outputs/2023-12-21/22-17-49/.hydra/: hydra.yaml
outputs/2023-12-21/22-18-55/.hydra/: hydra.yaml
outputs/2023-12-21/22-51-21/.hydra/: hydra.yaml
outputs/2023-12-21/22-53-20/.hydra/: hydra.yaml
outputs/2023-12-21/23-01-01/.hydra/: hydra.yaml
outputs/2023-12-23/21-55-41/.hydra/: hydra.yaml
outputs/2023-12-23/22-01-44/.hydra/: hydra.yaml
outputs/2023-12-23/22-08-38/.hydra/: hydra.yaml
outputs/2023-12-23/22-09-47/.hydra/: hydra.yaml
outputs/2023-12-23/22-15-10/.hydra/: hydra.yaml
(+10 files in other folders)
